--- a/.gitignore
+++ b/.gitignore
@@ -39,7 +39,8 @@ npm-debug.log
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
@@ -54,4 +55,8 @@ Icon
 Network Trash Folder
 Temporary Items
 .apdisk
+# Private key
+*.pem
+# build files
+dist/*
 
