--- a/package.json
+++ b/package.json
@@ -6,11 +6,10 @@
   "license": "AGPL-3.0-or-later",
   "repository": "https://github.com/offu/werobot-bot.git",
   "scripts": {
-    "dev": "nodemon --exec \"npm start\"",
-    "start": "probot run ./index.js",
-    "fix": "standard --fix",
-    "test": "standard && jest",
-    "test:watch": "jest --watch --notify --notifyMode=change --coverage"
+    "dev": "webpack --mode=development --watch",
+    "build": "webpack --mode=production",
+    "start:probot": "probot run ./dist/build.js",
+    "test": "npm run build && jest"
   },
   "dependencies": {
     "probot": "^6.0.0"
@@ -18,8 +17,15 @@
   "devDependencies": {
     "jest": "^22.4.3",
     "nodemon": "^1.17.2",
+    "nodemon-webpack-plugin": "^4.0.3",
     "smee-client": "^1.0.1",
-    "standard": "^10.0.3"
+    "ts-loader": "^4.3.0",
+    "tslint": "^5.10.0",
+    "tslint-config-standard": "^7.0.0",
+    "tslint-loader": "^3.6.0",
+    "typescript": "^2.8.3",
+    "webpack": "^4.9.1",
+    "webpack-cli": "^2.1.4"
   },
   "engines": {
     "node": ">= 8.3.0"
