--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,8 @@
     "module": "commonjs",
     "target": "es5",
     "sourceMap": true,
-    "strict": true
+    "strict": true,
+    "outDir": "./dist"
   },
   "exclude": [
     "node_modules"
