--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,12 @@ sudo: false
 language: node_js
 node_js:
   - "8.3"
+before_install:
+  - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version latest
+  - export PATH="$HOME/.yarn/bin:$PATH"
 install:
   - yarn install --frozen-lockfile
 script:
   - yarn test
+cache:
+  yarn: true
