--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: node_js
 node_js:
   - "8.3"
 before_install:
-  - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version latest
+  - curl -o- -L https://yarnpkg.com/install.sh | bash -s --
   - export PATH="$HOME/.yarn/bin:$PATH"
 install:
   - yarn install --frozen-lockfile
