--- a/package.json
+++ b/package.json
@@ -12,9 +12,23 @@
     "test": "npm run build && jest"
   },
   "dependencies": {
-    "probot": "^6.0.0"
+    "probot": "https://github.com/probot/probot"
   },
   "devDependencies": {
+    "@types/bunyan": "^1.8.4",
+    "@types/bunyan-format": "^0.2.0",
+    "@types/cache-manager": "^1.2.6",
+    "@types/dotenv": "^4.0.2",
+    "@types/express": "^4.0.39",
+    "@types/jest": "^21.1.8",
+    "@types/js-yaml": "^3.10.1",
+    "@types/jsonwebtoken": "^7.2.5",
+    "@types/nock": "^9.1.0",
+    "@types/node": "^8.5.1",
+    "@types/raven": "^2.1.5",
+    "@types/resolve": "^0.0.4",
+    "@types/semver": "^5.4.0",
+    "@types/supertest": "^2.0.4",
     "jest": "^22.4.3",
     "nodemon": "^1.17.2",
     "rimraf": "^2.6.2",
