--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "dev": "nodemon -e ts --exec \"tsc && npm run start:probot\"",
     "build": "rimraf dist && tsc",
     "start:probot": "probot run ./dist/index.js",
-    "test": "npm run build && jest"
+    "test": "jest"
   },
   "dependencies": {
-    "probot": "https://github.com/probot/probot"
+    "probot": "https://github.com/probot/probot",
+    "typescript": "^2.8.3",
+    "js-yaml": "^3.11.0"
   },
   "devDependencies": {
     "@types/bunyan": "^1.8.4",
@@ -21,7 +23,7 @@
     "@types/dotenv": "^4.0.2",
     "@types/express": "^4.0.39",
     "@types/jest": "^21.1.8",
-    "@types/js-yaml": "^3.10.1",
+    "@types/js-yaml": "^3.11.1",
     "@types/jsonwebtoken": "^7.2.5",
     "@types/nock": "^9.1.0",
     "@types/node": "^8.5.1",
@@ -33,9 +35,9 @@
     "nodemon": "^1.17.2",
     "rimraf": "^2.6.2",
     "smee-client": "^1.0.1",
+    "ts-jest": "^22.4.6",
     "tslint": "^5.10.0",
-    "tslint-config-standard": "^7.0.0",
-    "typescript": "^2.8.3"
+    "tslint-config-standard": "^7.0.0"
   },
   "engines": {
     "node": ">= 8.3.0"
@@ -43,6 +45,18 @@
   "standard": {
     "env": [
       "jest"
+    ]
+  },
+  "jest": {
+    "moduleFileExtensions": [
+      "ts",
+      "js"
+    ],
+    "transform": {
+      "^.+\\.(ts)$": "<rootDir>/node_modules/ts-jest/preprocessor.js"
+    },
+    "testMatch": [
+      "**/__tests__/**/*.ts", "**/?(*.)+(spec|test).ts"
     ]
   }
 }
