chore(package.json): correct author

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "werobot-bot",
   "version": "1.0.0",
   "description": "",
-  "author": "helloqiu <helloqiu95@gmail.com> (https://github.com/offu/werobot-bot)",
+  "author": "helloqiu <helloqiu95@gmail.com>",
   "license": "AGPL-3.0-or-later",
   "repository": "https://github.com/offu/werobot-bot.git",
   "scripts": {
