--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,9 @@
     "sourceMap": true,
     "strict": true,
     "outDir": "./dist",
+    "lib": [
+      "es2015"
+    ],
     "noImplicitAny": false // probot hasn't added all types :(
   },
   "exclude": [
