--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
   "dependencies": {
     "js-yaml": "3.11.0",
     "probot": "https://github.com/probot/probot",
-    "typescript": "2.9.1",
-    "js-yaml": "3.11.0"
+    "typescript": "2.9.1"
   },
   "devDependencies": {
     "@types/bunyan": "1.8.4",
