--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,8 @@
   "compilerOptions": {
     "module": "commonjs",
     "target": "es5",
+    "resolveJsonModule": true,
+    "esModuleInterop": true,
     "sourceMap": true,
     "strict": true,
     "outDir": "./dist",
