--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,9 @@ before_install:
 install:
   - yarn install --frozen-lockfile
 script:
+  - npm install codecov -g
   - yarn test
+after_success:
+  - codecov
 cache:
   yarn: true
