--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,11 @@
     "sourceMap": true,
     "strict": true,
     "outDir": "./dist",
-    "noImplicitAny": false // probot hasn't added all types :(
+    "noImplicitAny": false, // probot hasn't added all types :(
+    "lib": [
+      "es2015",
+      "dom"
+    ]
   },
   "exclude": [
     "node_modules"
