--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "test": "npm run build && jest --coverage"
   },
   "dependencies": {
+    "js-yaml": "^3.12.0",
     "probot": "https://github.com/probot/probot",
-    "typescript": "2.9.1",
-    "js-yaml": "3.12.0"
+    "typescript": "2.9.1"
   },
   "devDependencies": {
     "@types/bunyan": "1.8.4",
@@ -56,7 +56,8 @@
       "^.+\\.(ts)$": "<rootDir>/node_modules/ts-jest/preprocessor.js"
     },
     "testMatch": [
-      "**/__tests__/**/*.ts", "**/?(*.)+(spec|test).ts"
+      "**/__tests__/**/*.ts",
+      "**/?(*.)+(spec|test).ts"
     ],
     "collectCoverageFrom": [
       "<rootDir>/src/*.ts"
