chore: add label in bot config file

--- a/.github/issue-close-app.yml
+++ b/.github/issue-close-app.yml
@@ -10,3 +10,4 @@ issueConfigs:
   - "Describe the solution you'd like"
   - "Describe alternatives you've considered"
   - "Additional context"
+label: "closed by bot"
