--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
   "jest": {
     "moduleFileExtensions": [
       "ts",
-      "js"
+      "js",
+      "json"
     ],
     "transform": {
       "^.+\\.(ts)$": "ts-jest"
