chore: add exception to bot config

--- a/.github/issue-close-app.yml
+++ b/.github/issue-close-app.yml
@@ -11,3 +11,6 @@ issueConfigs:
   - "Describe alternatives you've considered"
   - "Additional context"
 label: "closed by bot"
+exception:
+  - "helloqiu"
+  - "whtsky"
