--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,7 @@
 {
   "extends": [
     "config:js-app",
+    "@whtsky:autoMergeNonMajorDevDependencies",
     ":maintainLockFilesWeekly",
     ":automergePatch"
   ]
