ci: use codecov-action for uploading codecovs

--- a/.github/workflows/node.js.yaml
+++ b/.github/workflows/node.js.yaml
@@ -17,5 +17,6 @@ jobs:
     - run: yarn install --frozen-lockfile
     - run: yarn test
     - run: yarn build
-    - run: npm install codecov -g
-    - run: codecov
+    - uses: codecov/codecov-action@v1
+      with:
+        verbose: true
