--- a/.github/workflows/node.js.yaml
+++ b/.github/workflows/node.js.yaml
@@ -3,10 +3,8 @@ name: Node.js CI
 on: [push, pull_request]
 
 jobs:
-  build:
-
+  test-and-build:
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v2
     - uses: bahmutov/npm-install@v1
